version/0.18/_sources/api/solver/_autosummary/settings/phase.rst.txt
:orphan:

.. _phase:

phase
=====

.. autoclass:: ansys.fluent.core.solver.settings_232.phase.phase
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`phase_child <phase_child>`


.. rubric:: Included in:

==================================   =================================

Parent                                                         Summary

==================================   =================================
:ref:`fluid_child <fluid_child_1>`       'child_object_type' of fluid.

==================================   =================================

